# multiplayer-time-travel-platform

./: .env  .env.example  .gitignore  README.md  create-multiplayer-release.sh  docker-compose.yml  multiplayer-time-travel-platform.sln  package.json
.github/workflows/: build.yml
clients/dotnet-cli-app/: README.md  dotnet-cli-app.csproj
clients/go-cli-app/: README.md  config.go  main.go  opentelemetry.go
clients/java-cli-app/: README.md  build.gradle
clients/mp-time-travel/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
clients/nodejs-cli-app/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
clients/python-cli-app/: README.md  config.py  main.py  otel.py  requirements.txt
clients/ruby-cli-app/: Gemfile  README.md  config.rb  main.rb  opentelemetry.rb
clients/web-app/: Dockerfile  Dockerfile.local  package-lock.json  package.json  tsconfig.json  webpack.config.ts
mp-time-travel/: package-lock.json
mp-time-travel/public/: index.html
mp-time-travel/src/: App.js
services/dialogue-hub/: Dockerfile  Dockerfile.dev  README.md  build.gradle  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
services/envoy/: README.md  backend.conf  docker-compose.yml  envoy-test-extension-v1.33.yaml  envoy-test-extension.yaml  envoy.yaml  otel-collector-config.yaml  otlp_capture_payload.wasm  start-envoy.sh  test-envoy-versions.sh
services/envoy/extensions/payload-otlp/: Cargo.toml  README.md  build.sh
services/envoy/extensions/payload-otlp/src/: lib.rs
(+260 files in other folders)
