[package]
publish = false
name = "otlp-capture-payload"
version = "0.0.1"
authors = ["Multiplayer <dmytro@multiplayer.app>"]
description = "Capture http payload and add it to otlp span"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
